Formatting office hours form

--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -198,14 +198,15 @@ input#author {
     margin-bottom: 0px;
 }
 
-/*input#cpath {*/
-    /*margin-bottom: 5px;*/
-/*}*/
-
 input {
     margin-bottom: 15px;
     height: 26px;
     width: 100%;
+}
+
+input.auto-width {
+    width: auto;
+    /*width: 49.1%;*/
 }
 
 select {
