--- a/tinker/office_hours/templates/office-hours-form.html
+++ b/tinker/office_hours/templates/office-hours-form.html
@@ -30,27 +30,33 @@
 {% endmacro %}
 
 {% macro ExceptionsFieldset() -%}
-
     <fieldset class="exceptions-fieldset">
-        <legend>Exception 1</legend>
-        <label for="exception_date">
-            Exception Date
-        </label>
-        <input class="datepicker" id="date1" name="date1" type="text" value=""/>
-        <label for="exception_open1">
-            Open *
-        </label>
-        <div class="large-12 columns timeRange">
-            <input class="time start ui-timepicker-input" id="open1" name="open1" type="text" value=""
-                   autocomplete="off">
-            - <input class="time end ui-timepicker-input" id="close1" name="close1" type="text" value=""
-                     autocomplete="off">
+        <div class="card">
+            <div class="content">
+                <legend>Exception 1</legend>
+                <label for="exception_date">
+                    Exception Date
+                </label>
+                <input class="datepicker" id="date1" name="date1" type="text" value=""/>
+                <label for="exception_open1">
+                    Open *
+                </label>
+                <div class="large-12 columns timeRange">
+                    <input class="time start ui-timepicker-input auto-width" id="open1" name="open1" type="text"
+                           value=""
+                           autocomplete="off">
+                    - <input class="time end ui-timepicker-input auto-width" id="close1" name="close1" type="text"
+                             value=""
+                             autocomplete="off">
+                </div>
+            </div>
         </div>
     </fieldset>
     <a href="javascript:void(0);" id="add_exception_button" class="btn btn-primary tiny">Add Another Exception</a>
     <a href="javascript:void(0);" id="remove_exception_button" style="display:none"
        class="btn btn-primary tiny btn-alert">Remove
         Exception</a>
+
 
 {% endmacro %}
 
@@ -75,7 +81,7 @@
             <div class="col-md-12">
 
                 {# todo: what should the copy be? #}
-                {#                <p>Some Copy</p>#}
+                <p>Some Copy</p>
                 <h3 class="subtitle">Edit Office Hours</h3>
                 <hr/>
                 <h4>BU Standard Hours</h4>
@@ -91,8 +97,8 @@
                     <input type="hidden" name="block_id" id="block_id" value="{{ block_id }}"/>
 
                     {% if form.errors %}
-                        <div class="alert alert-error">
-                            <div data-alert class="alert-box alert radius">
+                        <div class="error-alert">
+                            <div data-alert class="red-alert">
                                 There were errors with your form.
                                 <a href="#" class="close">&times;</a>
                             </div>
@@ -104,8 +110,8 @@
                         {{ CheckFieldLabel(field) }}
 
                         {% for error in form.errors[field.name] %}
-                            <div class="alert alert-error">
-                                <div data-alert class="alert-box alert radius">
+                            <div class="error-alert">
+                                <div data-alert class="red-alert">
                                     {{ error }}
                                     <a href="#" class="close">&times;</a>
                                 </div>
@@ -120,9 +126,9 @@
                         {% elif field.type == 'StringField' %}
                             {% if 'open' in field.name %}
                                 <div class="large-12 columns timeRange">
-                                    {{ field(class='time start') }}
+                                    {{ field(class='time start auto-width') }}
                                     {% elif 'close' in field.name %}
-                                    - {{ field(class='time end') }}
+                                    - {{ field(class='time end auto-width') }}
                                 </div>
                             {% else %}
                                 {{ field(class='datepicker') }}
@@ -130,9 +136,13 @@
 
                         {% elif field.type == 'NextOpenField' %}
                             <fieldset>
-                                <legend>Next</legend>
+                                <div class="card">
+                                    <div class="content">
+                                        <legend>Next</legend>
 
-                                {% elif field.type == 'NextCloseField' %}
+                                        {% elif field.type == 'NextCloseField' %}
+                                    </div>
+                                </div>
                             </fieldset>
 
                         {% elif field.type == 'ExceptionsField' %}
@@ -140,7 +150,9 @@
 
                         {% elif field.type == 'RadioField' %}
                             {% for subfield in field %}
-                                <label>{{ subfield }}{{ subfield.label }}</label>
+                                <label>
+                                    <div class="radio">{{ subfield() }}{{ subfield.label }}</div>
+                                </label>
                             {% endfor %}
                         {% else %}
                             {{ field() }}
@@ -158,7 +170,7 @@
 {% block scripts %}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.js"></script>
-    {#    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js"></script>#}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datepair.js/0.4.14/jquery.datepair.min.js"></script>
     <script src="{{ url_for('static', filename='csrf-activator.js') }}"></script>
 
@@ -169,8 +181,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='pikaday.css') }}">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.10.0/jquery.timepicker.min.css">
-    {#    <link rel="stylesheet"#}
-    {#          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/css/bootstrap-datepicker.standalone.css">#}
+    {#        <link rel="stylesheet"#}
+    {#              href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/css/bootstrap-datepicker.standalone.css">#}
 
     <script type="text/javascript">
         $(document).ready(function () {
@@ -196,7 +208,6 @@
                     });
                 });
             }
-
 
             dateTimePickers();
 
@@ -225,6 +236,7 @@
                 var openid = '#open' + id;
                 var closeid = '#close' + id;
                 $(dateid).val(exception['date']);
+                $(dateid).val(exception['date']);
                 $(openid).val(exception['open']);
                 $(closeid).val(exception['close']);
             }
@@ -233,22 +245,24 @@
                 var date = 'date' + id;
                 var open = 'open' + id;
                 var close = 'close' + id;
-                var node = $('<fieldset>').addClass('exceptions-fieldset');
-                node.append($("<legend>").html("Exception " + id));
+                var fieldset_node = $('<fieldset>').addClass('exceptions-fieldset');
+                var inner_node = $("<div>").addClass('content');
+                inner_node.append($("<legend>").html("Exception " + id));
 
-                node.append($("<label>").attr('date', date).html("Exception Date"));
-                node.append($("<input type='text'>").attr('name', date).attr('id', date).addClass("datepicker"));
+                inner_node.append($("<label>").attr('date', date).html("Exception Date"));
+                inner_node.append($("<input type='text'>").attr('name', date).attr('id', date).addClass("datepicker"));
 
                 var div = $("<div>").addClass('timeRange');
-                div.append($("<label>").attr('for', open).html("Open"));
+                div.append($("<label>").attr('for', open).html("Open *"));
 
-                div.append($("<input type='text'>").attr('name', open).attr('id', open).addClass("time start"));
+                div.append($("<input type='text'>").attr('name', open).attr('id', open).addClass("time start auto-width"));
                 div.append(" - ");
-                div.append($("<input type='text'>").attr('name', close).attr('id', close).addClass("time end"));
+                div.append($("<input type='text'>").attr('name', close).attr('id', close).addClass("time end auto-width"));
 
-                node.append(div);
+                inner_node.append(div);
+                fieldset_node.append($("<div>").addClass('card').append(inner_node));
 
-                return node;
+                return fieldset_node;
             }
 
 
@@ -281,7 +295,7 @@
 
             {% endif %}
 
-            dateTimePickers();
+            {#            dateTimePickers();#}
         });
     </script>
 
