Finished first version of office-hours unit testing suite.
I don’t have  a unit test for the rotate_hours endpoint yet because I
don’t yet know it’s purpose.

--- a/tinker/office_hours/templates/office-hours-form.html
+++ b/tinker/office_hours/templates/office-hours-form.html
@@ -81,6 +81,7 @@
 
       <form id="officehoursform" action="{{ url_for('office-hours.OfficeHoursView:post') }}" method="post" enctype="multipart/form-data">
       <input type="hidden" name="block_id" id="block_id" value="{{ block_id }}"/>
+      {{ form.csrf_token() }}
 
         {% if form.errors %}
           <div class="alert alert-error">
