updated the homepage icons

--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -15,8 +15,9 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('events.EventsView:index') }}"><img
-                                    src="get-image/events-icon.png"/></a>
+                            <a href="{{ url_for('events.EventsView:index') }}">
+                                <i class="fa fa-calendar fa-4x" aria-hidden="true" style='width:100%'></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -28,8 +29,9 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('faculty-bio.FacultyBioView:index') }}"><img
-                                    src="get-image/faculty-bio-icon.png"/></a>
+                            <a href="{{ url_for('faculty-bio.FacultyBioView:index') }}">
+                                <i class="fa fa-users fa-4x" aria-hidden="true" style='width:100%'></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -41,8 +43,9 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('e-announcements.EAnnouncementsView:index') }}"><img
-                                    src="get-image/e-announcement.png"></a>
+                            <a href="{{ url_for('e-announcements.EAnnouncementsView:index') }}">
+                                <i class="fa fa-envelope-o fa-4x" aria-hidden="true" style='width:100%'></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -54,8 +57,9 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <a href="{{ url_for('redirects.RedirectsView:index') }}"><img
-                                    src="get-image/redirect-icon.png"/></a>
+                            <a href="{{ url_for('redirects.RedirectsView:index') }}">
+                                <i class="fa fa-arrows-alt fa-4x" aria-hidden="true" style='width:100%'></i>
+                            </a>
                         </div>
                     </div>
                 </div>
